map marker added

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,3 +34,14 @@ code {
   margin: 12px;
   border-radius: 4px;
 }
+
+.marker-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.marker-btn img {
+  width: 20px;
+  height: 20px;
+}
